# acsl-chrono-simulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
chrono-assets/models/medianoQuad/: medianoQuad.cpp  medianoQuad.h
chrono-assets/models/medianoQuad/medianoQuad_shapes/: medianoQuad.txt
chrono-assets/models/tailsitter/: tailsitter.cpp  tailsitter.h
chrono-assets/models/tailsitter/tailsitter_shapes/: bqrbp.txt
chrono-assets/models/x8copter/: X8copter.h
chrono-assets/parameters/qrbp/MRAC_GEOMETRIC/: gains_MRAC_GEOMETRIC.json
chrono-assets/parameters/qrbp/MRAC_LONG_LAT/: gains_MRAC_LONG_LAT.json
chrono-assets/parameters/qrbp/MRAC_OBSERVER/: gains_MRAC_OBSERVER.json
chrono-assets/parameters/qrbp/PID_GEOMETRIC/: gains_PID_GEOMETRIC.json
chrono-assets/parameters/qrbp/PID_QUATERNION/: gains_PID_QUATERNION.json
chrono-assets/parameters/quadm/MRAC_GEOMETRIC/: gains_MRAC_GEOMETRIC.json
chrono-assets/parameters/tailsitter/MRAC_GEOMETRIC/: gains_MRAC_GEOMETRIC.json
chrono-assets/parameters/tailsitter/MRAC_HYBRID/: gains_MRAC_HYBRID.json
chrono-assets/qrbp/: qrbp..cpp  qrbp.cpp  qrbp.h
chrono-assets/qrbp/chrono-export/: qrbp.cpp  qrbp.h
chrono-assets/qrbp/chrono-export/qrbp_shapes/: qrbp.txt
chrono-assets/qrbp/qrbp-chrono-export/: qrbp_chrono_asset.cpp  qrbp_chrono_asset.h
chrono-assets/qrbp/qrbp-chrono-export/qrbp_chrono_asset_shapes/: qrbp_chrono_asset.txt
chrono-assets/qrbp/qrbp-solidworks/: prop_1.SLDPRT  prop_2.SLDPRT  prop_3.SLDPRT  prop_4.SLDPRT
chrono-assets/qrbp/qrbp_shapes/: chrono-qrbp.txt
chrono-assets/qrbp/solidworks/: prop.SLDPRT
chrono-assets/trajectories/interpolation/: temp.csv
chrono-assets/trajectories/minjerkpoly/: bank_test0p4.json  bank_traj0p4.json  bank_traj0p8.json  bean_trajectory0p2.json  bean_trajectory0p3.json  bean_trajectory0p6.json  bean_trajectory_modified0p8.json  biplane_traj0p369.json  biplane_traj0p38.json  biplane_traj0p39.json  biplane_traj0p4.json  biplane_traj0p5.json  biplane_traj0p6.json  diving_traj_0p5.json  fto0p225.json  fto0p245.json  fto0p25.json  fto0p256.json  fto0p257.json  fto0p26.json  fto0p265.json  fto0p27.json  fto0p3.json  fto0p315.json  fto0p318.json  fto0p319.json  fto0p324.json  fto0p325.json  fto0p326.json  fto0p327.json  fto0p328.json  fto0p329.json  fto0p33.json  fto0p331.json  fto0p332.json  fto0p333.json  fto0p334.json  fto0p335.json  fto0p35.json  fto0p5.json  (+11 more)
chrono-assets/x8copter/: X8copter.cpp
config/: phy-config.yaml  sim-config.yaml  vis-config.yaml
include/sim-aerofoil/: sim-aerofoil-coeff-base.hpp  sim-aerofoil.hpp
include/sim-aerofoil/sim-aerofoils/NACA0012/: NACA0012.hpp
include/sim-bridge/: sim-bridge.hpp
include/sim-interface/: adaptive-laws.hpp  deadzone-operator.hpp  sim-control-base.hpp  sim-helpers.hpp  sim-logger.hpp  sim-templated-helpers.hpp
include/sim-main/: sim-main.hpp
include/sim-scene/: sim-environment.hpp
include/sim-scene/sim-locales/: sim-locales.hpp
include/sim-scene/sim-locales/sim-flat/: sim-flat.hpp
include/sim-system/: sim-system.hpp
include/sim-trajectory/: sim-trajectory.hpp
include/sim-trajectory/sim-trajectories/: sim-traj-selection.hpp
include/sim-trajectory/sim-trajectories/piecewise-polynomial/: piecewise-polynomial-trajectory.hpp
include/sim-trajectory/sim-trajectories/vector-interpolation/: vector-interpolation-trajectory.hpp
include/sim-uav/: sim-uav.hpp
include/sim-uav/sim-platforms/: sim-controllers.hpp  sim-platforms.hpp
include/sim-utilities/: adaptive-laws.hpp  continuous-lyapunov-equation.hpp  deadzone-operator.hpp  projection-operator.hpp  sim-helpers.hpp  sim-logger.hpp  sim-messages.hpp  sim-templated-helpers.hpp
libraries/chrono-ros-messages/: .gitignore
manual/instructions/: chrono-installation.md  solidworks-plugin.md
matlab-scripts/adaptive-observer-tuner/: adaptive_rotational_differentiator_parameter_generator.m  adaptive_translational_observer_parameter_generator.m  differentiator_config.json  observer_config.json
matlab-scripts/adaptive-observer-tuner/functions/: check_controllability.m  check_eigen_condition.m  check_observability.m  clean_val.m  fmtnum.m  generate_A_ref_y.m  generate_A_tran_y.m  write_matrix.m
matlab-scripts/lvi-trajectory/: vector_interpolation_trajectory_generator.m
matlab-scripts/lvi-trajectory/functions/: animate_trajectory.m  compare_traj_interpolation.m  compute_trajectory.m  export_ref_traj_and_yaml.m  plot_rotational_data.m  plot_translational_data.m  process_input_file.m
matlab-scripts/lvi-trajectory/input/: datafile.yaml
matlab-scripts/min-jerk-poly/: trajectory_generator.m
matlab-scripts/min-jerk-poly/functions/: ._ComputeYawTrajectory.m  ._PolyCoefReshape.m  ._PolyDerMatrix.m  ._animate_3d_traj_with_heading.m  ._animate_3d_trajectory.m  ._getSegmentIndexAndLocalTime.m  ._norm2D.m  ._norm2Dder.m  ._output_for_matlab.m  ._read_input.m  ._structToJSONcpp.m  ._yamlmatlab  ComputeYawTrajectory.m  PolyCoefReshape.m  PolyDerMatrix.m  animate_3d_traj_with_heading.m  animate_3d_trajectory.m  getSegmentIndexAndLocalTime.m  norm2D.m  norm2Dder.m  output_for_matlab.m  read_input.m  structToJSONcpp.m
matlab-scripts/min-jerk-poly/input/: ._datafile.yaml  datafile.yaml
matlab-scripts/min-jerk-poly/output/: ._matlab
matlab-scripts/motor-thrust-polynomial/: motor_thrust_polynomial.m
matlab-scripts/motor-thrust-polynomial/data/: antigravity_mn5008_400kv.xlsx  antigravity_mn5008_400kv_rpm.xlsx  p2306_v3_2550Kv.xlsx  p2306_v3_2550Kv_rpm.xlsx  velox_v2808_1300kv.xlsx  velox_v2808_1300kv_rpm.xlsx
matlab-scripts/motor-thrust-polynomial/functions/: processSheet.m  revP.m  writeCalibrationJson.m
scripts/: clean-installer-log.sh  installer.sh
sim-log/: .gitignore
src/sim-aerofoil/: sim-aerofoil.cpp
src/sim-bridge/: sim-bridge.cpp
src/sim-interface/: sim-helpers.cpp  sim-logger.cpp
src/sim-main/: sim-main.cpp
src/sim-scene/: sim-environment.tpp
src/sim-system/: sim-system.cpp
src/sim-uav/: sim-uav.cpp  sim-uav.tpp
src/sim-utilities/: continuous-lyapunov-equation.cpp  sim-helpers.cpp
(+134 files in other folders)
